--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,12 @@ markdown:         kramdown
 highlighter:      rouge
 
 # Setup
-title:            Hydeout
-tagline:          'A Jekyll theme'
-description:      'The <a href="http://hyde.getpoole.com" target="_blank">Hyde</a> theme for <a href="http://jekyllrb.com" target="_blank">Jekyll</a>, refreshed.'
-url:              https://fongandrew.github.io
-baseurl:          '/hydeout'
+title:            Emil Tsalapatis
+tagline:          'PhD Researcher @ RCS Lab, University of Waterloo'
+description:      'PhD Researcher at the University of Waterloo. Working on Operating Systems, Storage and Serverless Computing.'
+url:              https://etsal.github.io
+baseurl:          '/docs/'
+destination:      'docs/'
                   # the optional subpath of your site, e.g. "/blog"
                   # NB: This applies to all pages in your Jekyll site.
                   # If you want to move just the blog index pages but keep
@@ -15,8 +16,8 @@ baseurl:          '/hydeout'
                   # sidebar_blog_link below.
 
 author:
-  name:           'Andrew Fong'
-  url:            https://twitter.com/fongandrewc
+  name:           'Emil Tsalapatis'
+  url:            https://twitter.com/
 
 paginate:         5
 # paginate_path:    '/page:num'
@@ -33,3 +34,9 @@ sidebar_home_link:  true
                                 # page. If you change your paginate_path,
                                 # set this to the root of the paginate_path
                                 # to enable a separate blog link.
+
+defaults:
+        - scope:
+                path: "assets/img"
+          values:
+                image: true
